fixed spacing on announcements ticker

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -234,6 +234,7 @@ img.webcomic {
     border-style: solid;
     border-width: 1px;
     border-color: #bfbfbf;
+    line-height: 100%;
 }
 .message {
     padding-top: 20px;
